<resources>
    <string name="app_name">MatchItMania</string>
    <string name="play_button">Play</string>
    <string name="profile_button">Profile</string>
    <string name="settings_button">Settings</string>
    <string name="home_button">Home</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="log_in">Log In</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="usernameDef">Player: Guest</string>
    <string name="lvl">lvl</string>
    <string name="achievements">Achievements</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="password">Password</string>
    <string name="passwordhint">***********</string>
    <string name="done">Done</string>
    <string name="registerMsg">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="devDesc">These are the developers behind the design, coding, and mechanics that bring this game to life. From crafting smooth gameplay to solving complex challenges.</string>
    <string name="joanaDesc">Driven by creativity and a shared vision, evolving their ideas and skills to bring their game to life from concept to completion.</string>
    <string name="luisDesc">Demonstrated creativity, overcoming challenges and boundaries to deliver a memorable gaming experience.</string>
    <string name="loginMsg">Already have an account? Log in</string>
    <string name="joanaHobbies">Hobbies: Drawing, Painting</string>
    <string name="luisHobbies">Hobbies: Dancing, Gaming</string>
    <string name="joanaBday">Birthday: May 15, 2003</string>
    <string name="luisBday">Birthday: April 25, 2004</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_play">How to Play</string>
    <string name="goal_title">Goal:</string>
    <string name="goal_description">Match all the blocks with the same drawings before the time runs out!</string>
    <string name="instructions_title">Instructions:</string>
    <string name="tutorial1"> 1. Find a Match:\n\t\t\tTap or click two blocks with the same drawing to match them.</string>
    <string name="tutorial2">2. Clear the Board:\n\t\t\tMatch all blocks to win the game! You must clear all blocks within the time limit.</string>
    <string name="tutorial3">3. Score Multiplier:\n\t\t\tMatching blocks correctly one after another without mistakes will activate a score multiplier.
        The more consecutive correct matches you make, the higher your score multiplier goes!\n\n
        A wrong match resets the multiplier back to 1×.</string>
    <string name="tutorial4">4. Time is Ticking:\n\t\t\tKeep an eye on the timer! If it runs out before you match all the blocks, the game is over.</string>
</resources>