<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forest3">

    <View
        android:id="@+id/view"
        android:layout_width="329dp"
        android:layout_height="586dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/gb_rounded_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="216dp"
        android:text="@string/username"
        android:textColor="@color/MWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="180dp"
        android:layout_height="34dp"
        android:layout_marginTop="212dp"
        android:background="#86A1A1A1"
        android:fontFamily="@font/poppins_thin"
        android:foregroundGravity="left"
        android:gravity="center|start"
        android:hint="@string/johndoe_gmail_com"
        android:textColor="#795D5E5D"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="300dp"
        android:text="@string/password"
        android:textColor="@color/MWhite"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="180dp"
        android:layout_height="34dp"
        android:layout_marginTop="300dp"
        android:background="#86A1A1A1"
        android:fontFamily="@font/poppins_thin"
        android:foregroundGravity="left"
        android:gravity="center|start"
        android:hint="@string/passwordhint"
        android:textColor="#795D5E5D"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <views.MTextView
        android:id="@+id/tvSettings"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/rubik_mono_one"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/MWhite"
        android:textSize="25sp"
        app:fontFamily="@font/rubik_mono_one"
        app:borderColor="@color/MBrown"
        app:borderWidth="5dp"
        app:cornerRadius="20dp"
        app:endColor="@color/MBluishGreen"
        app:gradientDirection="topToBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startColor="@color/MLightGreen" />


</androidx.constraintlayout.widget.ConstraintLayout>