<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".SettingsActivity">

    <View
        android:id="@+id/view"
        android:layout_width="329dp"
        android:layout_height="586dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/gb_rounded_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scMusic"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/music"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/scSound"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scVibration"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/poppins"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/vibration"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scSound"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppins"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:text="@string/sound"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/scVibration"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <views.MButton
        android:id="@+id/btnLogIn"
        android:layout_width="249dp"
        android:layout_height="73dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/log_in"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backColor="@color/MYellow"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:shadowColor="@color/MDarkPurple"
        app:shadowRadius="10dp" />

    <views.MButton
        android:id="@+id/btnAbout"
        android:layout_width="249dp"
        android:layout_height="73dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/log_in"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="About"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backColor="@color/MYellow"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:shadowColor="@color/MDarkPurple"
        app:shadowRadius="10dp" />

    <views.MTextView
        android:id="@+id/tvSettings"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:borderColor="@color/MShader"
        app:borderWidth="5dp"
        app:cornerRadius="20dp"
        app:endColor="#30287F"
        app:gradientDirection="topToBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startColor="@color/MPurple" />

    <views.MButton
        android:id="@+id/btnExit"
        android:layout_width="74dp"
        android:layout_height="71dp"
        android:layout_gravity="end"
        android:padding="100dp"
        app:backColor="#68FEA705"
        app:borderColor="@color/MShader"
        app:borderWidth="5dp"
        app:cornerRadius="90dp"
        app:imageBackground="@drawable/exit"
        app:imageScale="0.8"
        app:layout_constraintBottom_toTopOf="@+id/scMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSettings"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>