<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home2">

    <!-- Background View (Rounded Rectangle) -->
    <View
        android:id="@+id/tutorialBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gb_rounded_rect"
        app:layout_constraintTop_toTopOf="@+id/glH11"
        app:layout_constraintBottom_toTopOf="@+id/glH94"
        app:layout_constraintStart_toStartOf="@+id/glV571"
        app:layout_constraintEnd_toStartOf="@+id/glV579" />

    <!-- Title Text -->
    <views.MTextView
        android:id="@+id/HTP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:padding="7dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/how_to_play"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="35sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:borderColor="@color/MShader"
        app:borderWidth="5dp"
        app:cornerRadius="20dp"
        app:startColor="@color/MPurple"
        app:endColor="#30287F"
        app:gradientDirection="topToBottom"
        app:layout_constraintTop_toTopOf="@+id/glH06"
        app:layout_constraintBottom_toTopOf="@+id/glH16"
        app:layout_constraintStart_toStartOf="@+id/glV5715"
        app:layout_constraintEnd_toStartOf="@+id/glV5785" />

    <!-- Exit Button -->
    <views.MButton
        android:id="@+id/btnExit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="100dp"
        app:backColor="#68FEA705"
        app:borderColor="@color/MShader"
        app:borderWidth="5dp"
        app:cornerRadius="90dp"
        app:imageBackground="@drawable/exit"
        app:imageScale="0.8"
        app:layout_constraintBottom_toTopOf="@+id/glH19"
        app:layout_constraintEnd_toStartOf="@+id/glV5796"
        app:layout_constraintStart_toStartOf="@+id/glV5777"
        app:layout_constraintTop_toTopOf="@+id/glH09" />

    <!-- Scrollable Tutorial Section -->
    <ScrollView
        android:id="@+id/svBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/glH16"
        app:layout_constraintBottom_toTopOf="@id/glH8"
        app:layout_constraintStart_toStartOf="@id/glV5715"
        app:layout_constraintEnd_toEndOf="@id/glV5785">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Goal Title -->
            <TextView
                android:id="@+id/tutorialGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <!-- Goal Description -->
            <TextView
                android:id="@+id/tutorialGoalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/goal_description"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <!-- Instructions Title -->
            <TextView
                android:id="@+id/tutorialInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/instructions_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <!-- Instructions Description -->
            <TextView
                android:id="@+id/tutorialInstructionDesc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tutorial1"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <ImageView
                android:id="@+id/tutorialImage1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tutorial1" />

            <TextView
                android:id="@+id/tutorialInstructionDesc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tutorial2"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <ImageView
                android:id="@+id/tutorialImage2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tutorial2" />

            <TextView
                android:id="@+id/tutorialInstructionDesc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tutorial3"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <ImageView
                android:id="@+id/tutorialImage3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tutorial3" />

            <TextView
                android:id="@+id/tutorialInstructionDesc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tutorial4"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="20"
                android:padding="7dp" />

            <ImageView
                android:id="@+id/tutorialImage4"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/tutorial4" />

        </LinearLayout>
    </ScrollView>

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH456"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="161dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV571"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV579"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV5715"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV5785"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV5777"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV5796"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV5725"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />


</androidx.constraintlayout.widget.ConstraintLayout>
