<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:textAlignment="center"
    tools:context=".HomeActivity">

    <views.MButton
        android:id="@+id/btnProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/profile_button"
        app:backColor="@color/MBlue"
        app:borderColor="@color/MPurple"
        app:borderWidth="10dp"
        app:cornerRadius="10dp"
        app:imageBackground="@drawable/avatar1"
        app:imageScale="0.9"
        app:layout_constraintBottom_toTopOf="@+id/glProfileDown"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/glHomeButtonL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glProfileUp" />

    <views.MButton
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/settings_button"
        app:backColor="#00000000"
        app:cornerRadius="10dp"
        app:imageBackground="@drawable/settings"
        app:layout_constraintBottom_toTopOf="@+id/glProfileDown"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glHomeButtonR"
        app:layout_constraintTop_toTopOf="@+id/glProfileUp"
        app:shadowColor="#00000000" />

    <!-- Play Button in the Center -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/glLogoDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glProfileDown" />

    <views.MButton
        android:id="@+id/btnPlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="32sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:contentDescription="@string/play_button"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="PLAY"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:backColor="@color/MYellow"
        app:cornerRadius="50dp"
        app:fontWeight="1"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@id/glButtonsTop"
        app:layout_constraintBottom_toTopOf="@id/btnTutorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4.5:1"
        app:shadowColor="@color/MPurple"
        app:shadowRadius="12dp" />

    <views.MButton
        android:id="@+id/btnTutorial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:autoSizeMaxTextSize="32sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:contentDescription=""
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="TUTORIAL"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:backColor="@color/MPurple"
        app:cornerRadius="50dp"
        app:fontWeight="1"
        app:layout_constraintTop_toBottomOf="@id/btnPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4.5:1"
        app:shadowColor="@color/MPurple"
        app:shadowRadius="12dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glProfileUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glProfileDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLogoDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHomeButtonR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHomeButtonL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glButtonsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>
